# skypro2

./: .flake8  .gitignore  README.md  log1.txt  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_b29f49ec45f0dd99___init___py.html  z_b29f49ec45f0dd99_transactions_py.html
src/: Log.txt  decorators.py  external_api.py  generators.py  log1.txt  logger.py  masks.py  processing.py  utils.py  widget.py
src/data/: transactions.py
src/test_data/: transactions.py
tests/: Log.txt  conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
